source/hints.css
.rango-hint {
	z-index: 101;
	position: absolute;
	border-radius: 30%;
	box-shadow: rgba(0 0 0 / 24%) 0 3px 8px;
	padding: 2px;
	width: auto;
	/* height: 18px; */
	/* line-height: 18px; */
	text-align: center;
	font-family: monospace;
	font-size: 10px;
}

.rango-hint-light {
	background: #fff;
	color: #333;
}

.rango-hint-dark {
	background: #333;
	color: #fff;
}

